--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,13 @@
             android:exported="false" />
         <activity
             android:name="screens.MedicalRecordsActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name="screens.MedicalDrugsActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name="screens.OTPActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name="screens.HomeActivity"
             android:exported="false" />
@@ -34,12 +34,10 @@
             android:exported="false" />
         <activity
             android:name="screens.LoginActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name="screens.SplashActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
