--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0-alpha01'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 
 
 }
