--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tabib">
         <activity
+            android:name="screens.DoctorsActivity"
+            android:exported="false" />
+        <activity
+            android:name="screens.MedicalAdvicesActivity"
+            android:exported="false" />
+        <activity
+            android:name="screens.IllnessesActivity"
+            android:exported="false" />
+        <activity
             android:name="screens.ResetPasswordActivity"
             android:exported="false" />
         <activity
@@ -34,7 +43,7 @@
             android:exported="false" />
         <activity
             android:name="screens.LoginActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name="screens.SplashActivity"
             android:exported="true">
