--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,15 @@
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.20' apply false
 }
-
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        maven { url "https://jitpack.io" }
+    }
+}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
