--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tabib">
+        <activity
+            android:name="doctor_screens.PatientProfileActivity"
+            android:exported="true" >
 
+        </activity>
         <activity
             android:name="user_screens.DoctorsActivity"
             android:exported="false" />
@@ -47,9 +51,7 @@
             android:exported="true" />
         <activity
             android:name="user_screens.SplashActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"/>
         <activity
             android:name="doctor_screens.DoctorHomeActivity"
             android:exported="true">
