--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tabib">
         <activity
-            android:name="doctor_screens.PatientProfileActivity"
-            android:exported="true" >
-
-        </activity>
+            android:name="user_screens.AddRecordActivity"
+            android:exported="false" />
+        <activity
+            android:name="doctor_screens.PatientSearchActivity"
+            android:exported="true"></activity>
         <activity
             android:name="user_screens.DoctorsActivity"
             android:exported="false" />
@@ -51,7 +52,7 @@
             android:exported="true" />
         <activity
             android:name="user_screens.SplashActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name="doctor_screens.DoctorHomeActivity"
             android:exported="true">
