--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.roughike:bottom-bar:2.3.1'
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
+
+
 
 
 
