--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.roughike:bottom-bar:2.3.1'
     implementation 'com.github.dhaval2404:imagepicker:2.1'
-
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 
 
 
