--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.tabib" >
+    package="com.example.tabib">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -11,7 +11,7 @@
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Tabib" >
+        android:theme="@style/Theme.Tabib">
         <activity
             android:name="doctor_screens.SignUpDoctorActivity"
             android:exported="false" />
@@ -43,7 +43,7 @@
             android:name="user_screens.MedicalDrugsActivity"
             android:exported="true" />
         <activity
-            android:name="user_screens.OTPActivity"
+            android:name="user_screens.UserOTPActivity"
             android:exported="true" />
         <activity
             android:name="user_screens.HomeActivity"
@@ -61,7 +61,7 @@
             android:exported="true" />
         <activity
             android:name="user_screens.SplashActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
