--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     implementation 'com.roughike:bottom-bar:2.3.1'
     implementation 'com.github.dhaval2404:imagepicker:2.1'
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.firebaseui:firebase-ui-firestore:8.0.1'
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
 
 
